deploy/kubernetes/api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
  labels:
    app: kvitta-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kvitta-api
  template:
    metadata:
      name: kvitta-api
      labels:
        app: kvitta-api
    spec:
      containers:
        - name: kvitta-api
          image: erikstrand/kvitta-arm64:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8999
              protocol: TCP
      restartPolicy: Always
