deploy/kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kvitta
  name: kvitta-api
  labels:
    app: kvitta-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kvitta-api
  template:
    metadata:
      name: kvitta-api
      labels:
        app: kvitta-api
    spec:
      containers:
        - name: kvitta-api
          image: kvitta-app:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8999
              protocol: TCP
      restartPolicy: Always
