deploy/kubernetes/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
spec:
  selector:
    app: kvitta-api
  ports:
    - protocol: TCP
      port: 8999
      targetPort: 80
