deploy/kubernetes/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  labels:
    app: kvitta-db
spec:
  selector:
    app: kvitta-db
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
