deploy/kubernetes/kvitta-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kvitta
  name: kvitta-svc
spec:
  selector:
    app: kvitta-api
  ports:
    - name: http
      port: 80
